--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,22 @@
     --slate: #434455;
     --white: #FFFFFF;
     --cloud: #F4F4FD;
+    --cornflower: #E7E9FC
+}
 
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
 }
 
 .list {
@@ -23,7 +37,19 @@ body {
     background-color: var(--white)
 }
 
-/* =====================  Common components  ================ */
+/* ===================== Start Common components  ============ */
+.container {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 .button {
     font-family: inherit;
@@ -35,6 +61,7 @@ body {
     color: var(--iris);
     background-color: var(--cloud);
     cursor: pointer;
+    border-radius: 4px;
 }
 
 .button:hover,
@@ -49,6 +76,8 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--navy-blue);
+
+    margin-bottom: 8px;
 }
 
 .subtitle,
@@ -68,9 +97,24 @@ body {
     text-transform: capitalize;
     color: var(--navy-blue);
 
+    margin-bottom: 72px;
+
 }
 
-/* ======================  Header ===========================*/
+/* ===================== End Common components  ============= */
+
+/* ====================== Start Header =======================*/
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--cornflower);
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .logo {
     font-family: 'Raleway', sans-serif;
@@ -79,11 +123,26 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--iris)
+    color: var(--iris);
+
+    margin-right: 76px;
 }
 
 .decor {
     color: var(--navy-blue);
+}
+
+.page-nav {
+    display: flex;
+}
+
+.menu {
+    display: flex;
+
+}
+
+.menu-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 .menu-link {
@@ -97,12 +156,18 @@ body {
 
 .menu-link:hover,
 .menu-link:focus {
-    color: var(--ocean)
+    color: var(--ocean);
 }
 
 
 .contacts {
     font-style: normal;
+
+    display: flex;
+}
+
+.contacts-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 .contacts-link {
@@ -114,53 +179,162 @@ body {
 
 .contacts-link:hover,
 .contacts-link:focus {
-    color: var(--ocean)
+    color: var(--ocean);
 }
 
-/* ======================  Hero ===================== */
+/* ====================== End Header =======================*/
+
+/* ====================== Start Hero ===================== */
 .hero {
     background-color: var(--navy-blue);
+    text-align: center;
 }
 
 .hero-title {
+    width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    text-align: center;
     color: var(--white);
 }
 
 .hero-button {
     background-color: var(--iris);
     color: var(--white);
+
+    padding: 16px 32px;
+
+}
+
+/* ====================== End Hero ===================== */
+
+
+/* =====================  Start Advantages  ================= */
+.advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+.advantages-item {
+    width: calc((100% - 72px)/4);
+}
+
+/* =======================  End Advantages  ================= */
+.advantages {
+    padding-bottom: 60px;
 }
 
 
-/* =======================  Advantages  ===================== */
+/* ======================= Start Work  ======================= */
+.work {
+    padding-top: 60px;
+}
 
-/* ======================  Team  =========================== */
+.work-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px
+}
+
+.work-item {
+    width: calc((100% - 48px)/3);
+}
+
+
+/* ======================= End  Work  ======================= */
+
+/* ====================== Start Team  ======================== */
 .team {
     background-color: var(--cloud);
 }
 
-.team-item {
-    background-color: var(--white);
+.team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px
 }
 
-/* =======================  Work  ========================== */
+.team-item {
+    background-color: var(--white);
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px)/4);
+}
 
-/* ======================  Footer  ============================= */
+.team-content {
+    padding: 32px 16px;
+    text-align: center;
+}
+
+/* ====================== End Team  =========================== */
+
+/* ====================== Start Footer  ====================== */
 .footer {
     background-color: var(--navy-blue);
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.footer-content {
+    width: 264px;
 }
 
 .footer-description {
     color: var(--cloud);
 }
 
+.logo-footer {
+    display: inline-flex;
+    margin-bottom: 16px;
+    margin-right: 0;
+}
+
 .logo-footer .decor {
     color: var(--cloud);
 }
 
-/* ======================= Portfolio ========================== */
+/* ====================== End Footer  ======================== */
+
+/* ======================= Start Portfolio =================== */
+
+.portfolio {
+    padding-top: 96px;
+}
+
+.portfolio-filter {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
+
+.portfolio-filter .button {
+    padding: 12px 24px;
+    border: 1px solid var(--cornflower)
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+
+.portfolio-item {
+    width: calc((100% - 48px)/3);
+
+
+}
+
+.portfolio-item-content {
+    padding: 32px 16px;
+    border: 1px solid var(--cornflower);
+    border-top: 0;
+}
+
+/* ======================= End Portfolio ====================== */
