--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,17 @@ body {
     padding-bottom: 120px;
 }
 
+.hidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+}
+
 .button {
     font-family: inherit;
     font-style: normal;
@@ -62,12 +73,14 @@ body {
     background-color: var(--cloud);
     cursor: pointer;
     border-radius: 4px;
+    border: none;
 }
 
 .button:hover,
 .button:focus {
     background-color: var(--ocean);
     color: var(--white);
+    border: 1px solid transparent;
 }
 
 .title {
@@ -134,6 +147,7 @@ body {
 
 .page-nav {
     display: flex;
+    align-items: center;
 }
 
 .menu {
@@ -146,6 +160,8 @@ body {
 }
 
 .menu-link {
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -188,10 +204,11 @@ body {
 .hero {
     background-color: var(--navy-blue);
     text-align: center;
+    padding: 188px 0;
 }
 
 .hero-title {
-    width: 496px;
+    max-width: 496px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 48px;
@@ -206,7 +223,11 @@ body {
 .hero-button {
     background-color: var(--iris);
     color: var(--white);
-
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 16px 32px;
 
 }
@@ -280,16 +301,13 @@ body {
     padding-bottom: 100px;
 }
 
-.footer-content {
-    width: 264px;
-}
-
 .footer-description {
+    max-width: 264px;
     color: var(--cloud);
 }
 
 .logo-footer {
-    display: inline-flex;
+    display: inline-block;
     margin-bottom: 16px;
     margin-right: 0;
 }
